Overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     'navbar main';
   grid-template-rows: 50px auto;
   grid-template-columns: 250px auto;
+  overflow: hidden;
 }
 
 .App.navbar-hidden {
@@ -46,6 +47,7 @@
 
 .wrapper-main {
   grid-area: main;
+  overflow: auto;
 }
 
 .dashboard-header {
